--- a/package.json
+++ b/package.json
@@ -11,5 +11,17 @@
     "ecosystem:cordova"
   ],
   "author": "Apache Cordova Team",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "cordova-android": "^10.1.2",
+    "cordova-browser": "^6.0.0",
+    "cordova-windows": "^7.0.1"
+  },
+  "cordova": {
+    "platforms": [
+      "windows",
+      "android",
+      "browser"
+    ]
+  }
 }
